--- a/templates/workload.template
+++ b/templates/workload.template
@@ -965,7 +965,7 @@
                         ]
                     ]
                 },
-                "Runtime": "nodejs8.10",
+                "Runtime": "nodejs12.x",
                 "Role": {
                     "Fn::GetAtt": [
                         "IamRoleLfFgtAsg",
