--- a/templates/copy-lambda.template
+++ b/templates/copy-lambda.template
@@ -64,7 +64,7 @@ Resources:
             - ''
             - 'def delete_objects(bucket):'
             - '    client = boto3.client(''s3'')'
-            - '    print("Collecting data from" + bucket)'
+            - '    print(("Collecting data from" + bucket))'
             - '    paginator = client.get_paginator(''list_object_versions'')'
             - '    result = paginator.paginate(Bucket=bucket)'
             - '    objects = []'
@@ -98,7 +98,7 @@ Resources:
             - '    timer = threading.Timer((context.get_remaining_time_in_millis() / 1000.00) - 0.5, timeout, args=[event, context])'
             - '    timer.start()'
             - ''
-            - '    print(''Received event: %s'' % json.dumps(event))'
+            - '    print((''Received event: %s'' % json.dumps(event)))'
             - '    status = cfnresponse.SUCCESS'
             - '    try:'
             - '        source_bucket = event[''ResourceProperties''][''SourceBucket'']'
