Updating copy-lambda formatting

--- a/templates/copy-lambda.template
+++ b/templates/copy-lambda.template
@@ -188,7 +188,7 @@ Resources:
             - ''
             - ''
             - 'def delete_NonVersionedobjects(bucket):'
-            - '    print("Collecting data from" + bucket)'
+            - '    print(("Collecting data from" + bucket))'
             - '    paginator =     client.get_paginator(''list_objects_v2'')'
             - '    result = paginator.paginate(Bucket=bucket)'
             - '    objects = []'
@@ -204,7 +204,7 @@ Resources:
             - '            print("bucket is already empty")'
             - ''
             - 'def delete_versionedobjects(bucket):'
-            - '    print("Collecting data from" + bucket)'
+            - '    print(("Collecting data from" + bucket))'
             - '    paginator = client.get_paginator(''list_object_versions'')'
             - '    result = paginator.paginate(Bucket=bucket)'
             - '    objects = []'
@@ -238,7 +238,7 @@ Resources:
             - '    timer = threading.Timer((context.get_remaining_time_in_millis() / 1000.00) - 0.5, timeout, args=[event, context])'
             - '    timer.start()'
             - ''
-            - '    print(''Received event: %s'' % json.dumps(event))'
+            - '    print((''Received event: %s'' % json.dumps(event)))'
             - '    status = cfnresponse.SUCCESS'
             - '    try:'
             - '        dest_bucket = event[''ResourceProperties''][''DestBucket'']'
