--- a/templates/copy-lambda.template
+++ b/templates/copy-lambda.template
@@ -250,7 +250,7 @@ Resources:
             - '                print ("This is a versioned Bucket")'
             - '                delete_versionedobjects(dest_bucket)'
             - '            else:'
-            - '                print("This is not a versioned bucket"')
+            - '                print("This is not a versioned bucket")'
             - '                delete_NonVersionedobjects(dest_bucket)'
             - '        else:'
             - '            print("Nothing to do")'
