--- a/templates/create-new-vpc.yaml
+++ b/templates/create-new-vpc.yaml
@@ -69,8 +69,8 @@ Resources:
     Properties:
       CidrBlock: !Ref 'VPCCIDR'
       InstanceTenancy: default
-      EnableDnsSupport: 'true'
-      EnableDnsHostnames: 'true'
+      EnableDnsSupport: true
+      EnableDnsHostnames: true
   PublicSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
@@ -130,10 +130,10 @@ Resources:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
       CidrBlock: '0.0.0.0/0'
-      Egress: 'true'
-      Protocol: '-1'
+      Egress: true
+      Protocol: -1
       RuleAction: allow
-      RuleNumber: '100'
+      RuleNumber: 100
       NetworkAclId: !Ref 'FgtPublicSubnetAcl'
     DependsOn:
       - FgtPublicSubnetAcl
@@ -141,9 +141,9 @@ Resources:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
       CidrBlock: '0.0.0.0/0'
-      Protocol: '-1'
+      Protocol: -1
       RuleAction: allow
-      RuleNumber: '100'
+      RuleNumber: 100
       NetworkAclId: !Ref 'FgtPublicSubnetAcl'
     DependsOn:
       - FgtPublicSubnetAcl
