--- a/templates/workload-master.yaml
+++ b/templates/workload-master.yaml
@@ -325,12 +325,10 @@ Resources:
         PublicSubnet2CIDR: !Ref 'PublicSubnet2CIDR'
         PrivateSubnet1CIDR: !Ref 'PrivateSubnet1CIDR'
         PrivateSubnet2CIDR: !Ref 'PrivateSubnet2CIDR'
-      TemplateURL: !Sub
-        - 'https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}templates/create-new-vpc.template'
-        - QSS3Region: !If
-            - GovCloudCondition
-            - s3-us-gov-west-1
-            - s3
+      TemplateURL:
+        !Sub
+          - 'https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}templates/create-new-vpc.yaml'
+          - QSS3Region: !If [GovCloudCondition, s3-us-gov-west-1, s3]
       TimeoutInMinutes: 5
   StackDeployFgtAsgSolution:
     Type: AWS::CloudFormation::Stack
@@ -364,10 +362,8 @@ Resources:
         FortiGateAdminPort: !Ref 'FortiGateAdminPort'
         FortiGateAdminCidr: !Ref 'FortiGateAdminCidr'
         KeyPairName: !Ref 'KeyPairName'
-      TemplateURL: !Sub
-        - 'https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}templates/workload.template'
-        - QSS3Region: !If
-            - GovCloudCondition
-            - s3-us-gov-west-1
-            - s3
+      TemplateURL:
+        !Sub
+          - 'https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}templates/workload.yaml'
+          - QSS3Region: !If [GovCloudCondition, s3-us-gov-west-1, s3]
       TimeoutInMinutes: 30
